add swp to gitignore, new gtest path, update gtest fwk

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,6 @@ out
 .project
 
 # Output Directories
-<<<<<<< HEAD
-=======
-out
-.settings
 .project
 .cproject
-
->>>>>>> d5494652279629a45aae0848ee53d59a11fb3181
+.*.swp
