ipc_gtest_gworker app test

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "ipc_common"]
 	path = ipc_common
 	url = git@github.com:BeentageBand/ipc_common.git
+[submodule "support/ccposix"]
+	path = support/ccposix
+	url = git@github.com:BeentageBand/ccposix.git
